# os_5_lab

./: CMakeLists.txt
src/: dynMain.c  realization.h  realization1.c  realization2.c  statMain.c
src/calc_integral/: realization.h  realization1.c  realization2.c
src/translate_number/: realization.h  realization1.c  realization2.c
